# swain.codes

./: README.md  build.py  new.py  pyproject.toml  start.py
.github/workflows/: deploy.yml
src/: index.html  post.html  posts.html
src/posts/: 2025-07-26-test.md  test.md
src/styles/: codehilite.css  styles.css
