[project]
name = "swain.codes"
version = "0.0.0"
description = ""
authors = [
    {name = "Swain Molster",email = "swain.molster@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["markdown (>=3.8.2,<4.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false